# esp32-interactive-pad-and-API-For-Windows

./: .gitignore  README.md  application_scanner.md  pent.ps1  pyproject.toml  requirements.txt  run_gui.py  run_server.py  test_discovery.py
.windsurf/: rules.md
data/: logging_settings.json
docs/: CODING_GUIDELINES.md  PROJECT_SPEC.md
docs/api/: API_SPEC.md
docs/database/: SCHEMA.md
docs/esp32/: ESP32_FIRMWARE_SPEC.md
docs/security/: SECURITY_MODEL.md
docs/windows/: WINDOWS_APP_DESIGN.md
firmware/esp32_displaypad/: ESP32_UI_GUIDELINES.md  README.md  build_log.txt  esp32_compile.bat  esp32_icons.h  platformio.ini
firmware/esp32_displaypad/src/: api_client.cpp  api_client.h  bluetooth_manager.cpp  bluetooth_manager.h  button_renderer.cpp  button_renderer.h  config.h  connection_mode.h  control_panel.cpp  control_panel.h  discovery_beacon.cpp  discovery_beacon.h  display.cpp  display.h  icon_cache.cpp  icon_cache.h  ip_keyboard.cpp  ip_keyboard.h  main.cpp  penta_star_studios_new_png.h  pin_keypad.cpp  pin_keypad.h  startup_wav.h  (+7 more)
icons/: convert_pngs_to_esp32_masks.py  love.py  whatsup.py
icons/_png_categories/: png_analysis_report.csv
prompts/: PHASE_1_PROMPT.md  PHASE_2_SECURITY_PROMPT.md  WINDSURF_MASTER_PROMPT.md
scripts/: run_dev_server.ps1
src/displaypad_server/: application_icon_importer.py  application_icons.py  application_launcher.py  application_scanner.py  applications.py  ble_bluetooth_bridge.py  ble_scan_test.py  bluetooth_bridge.py  launcher.py  main.py
tasks/: IMPLEMENTATION_PLAN.md
tests/: test_layout.py  test_security.py
(+29 files in other folders)
